--- a/blog.guitarrapc.com/package.json
+++ b/blog.guitarrapc.com/package.json
@@ -13,6 +13,7 @@
     "@astrojs/mdx": "^0.18.4",
     "@astrojs/rss": "^2.4.4",
     "@astrojs/sitemap": "^1.4.0",
-    "astro": "^2.10.15"
+    "astro": "^2.10.15",
+    "rollup": "^4.9.5"
   }
 }
