--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Install, build, and upload your site
         uses: withastro/action@v1
         with:
-          path: blog.guitarrapc.com # The root location of your Astro project inside the repository. (optional)
+          path: ./blog.guitarrapc.com # The root location of your Astro project inside the repository. (optional)
           node-version: 20
 
   deploy:
