--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -22,6 +22,10 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
+      - name: Show list of directory
+        run: ls -l
+      - name: Show list of directory (blog.guitarrapc.com)
+        run: ls -l ./blog.guitarrapc.com
       - name: Install, build, and upload your site
         uses: withastro/action@v1
         with:
