--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -26,7 +26,7 @@ jobs:
         run: ls -l
       - name: Show list of directory (blog.guitarrapc.com)
         run: |
-          ls -l ./blog.guitarrapc.com/blog.guitarrapc.com/package.json
+          ls -l ./blog.guitarrapc.com/package.json
           ls -l /home/runner/work/blog.guitarrapc.com/blog.guitarrapc.com/package.json
       - name: Install, build, and upload your site
         uses: withastro/action@v1
