ci: show realpath

--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -27,7 +27,8 @@ jobs:
       - name: Show list of directory (blog.guitarrapc.com)
         run: |
           pwd
-          ls -l ./blog.guitarrapc.com/package.json
+          ls -l ./blog.guitarrapc.com
+          readlink -f ./blog.guitarrapc.com/package.json
           ls -l /home/runner/work/blog.guitarrapc.com/blog.guitarrapc.com/package.json
       - name: Install, build, and upload your site
         uses: withastro/action@v1
