--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -30,6 +30,7 @@ jobs:
       - name: Install, build, and upload your site
         uses: withastro/action@v1
         with:
+          path: ./blog.guitarrapc.com
           node-version: 20
 
   deploy:
