--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -28,9 +28,9 @@ jobs:
           ls -l ./blog.guitarrapc.com
           readlink -f ./blog.guitarrapc.com/package.json
       - name: Install, build, and upload your site
-        uses: withastro/action@v1
+        uses: withastro/action@v0
         with:
-          path: blog.guitarrapc.com/package.json
+          path: blog.guitarrapc.com
           node-version: 20
 
   deploy:
