--- a/blog.guitarrapc.com/package.json
+++ b/blog.guitarrapc.com/package.json
@@ -5,14 +5,16 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^2.0.5",
-    "@astrojs/rss": "^4.0.2",
-    "@astrojs/sitemap": "^3.0.5",
-    "astro": "^4.2.1"
+    "@astrojs/mdx": "^3.1.5",
+    "@astrojs/rss": "^4.0.7",
+    "@astrojs/sitemap": "^3.1.6",
+    "astro": "^4.15.4",
+    "@astrojs/check": "^0.9.3",
+    "typescript": "^5.6.2"
   }
 }
