--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,8 +7,17 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-
+    ignore:
+      # I just want update action when major/minor version is updated. patch updates are too noisy.
+      - dependency-name: "*"
+        update-types:
+          - version-update:semver-patch
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "weekly"
+    ignore:
+      # I just want update action when major/minor version is updated. patch updates are too noisy.
+      - dependency-name: "*"
+        update-types:
+          - version-update:semver-patch
