--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,12 +1,14 @@
-# Set update schedule for each package manager
-
+# ref: https://docs.github.com/en/code-security/dependabot/working-with-dependabot/keeping-your-actions-up-to-date-with-dependabot
 version: 2
 updates:
   - package-ecosystem: "github-actions"
-    # Workflow files stored in the default location of `.github/workflows`. (You don't need to specify `/.github/workflows` for `directory`. You can use `directory: "/"`.)
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly" # Check for updates to GitHub Actions every week
+    cooldown:
+      default-days: 14
+      semver-major-days: 30
+      semver-minor-days: 14
     ignore:
       # I just want update action when major/minor version is updated. patch updates are too noisy.
       - dependency-name: "*"
@@ -15,7 +17,11 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "weekly" # Check for updates to GitHub Actions every week
+    cooldown:
+      default-days: 14
+      semver-major-days: 30
+      semver-minor-days: 14
     ignore:
       # I just want update action when major/minor version is updated. patch updates are too noisy.
       - dependency-name: "*"
